--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.2.2"
-group= "blusunrize" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = "1.2.3"
+group= "blusunrize"
 archivesBaseName = "BluDecorations"
 
 minecraft {
